syntax = "proto3";
package legalai;

message TensorRequest {
  string id = 1;
  string text = 2;
  string model = 3;
}

message TensorResponse {
  string id = 1;
  repeated float values = 2;
  bool cached = 3;
}

service TensorService {
  rpc GetTensor (TensorRequest) returns (TensorResponse);
}
